# hnefatafl

./: Cargo.toml  README.md  bindings.h  build.rs  generate-uniffi-bindings.sh  perf.sh  two-player.sh
.github/workflows/: tests.yml
src/: bot.rs  config.rs  ffi.rs  hnefatafl.udl  lib.rs  main.rs  piece.rs  state.rs  tensor.rs
src/bot/: mod.rs
src/bot/minmax/: mod.rs
src/ffi/: array.rs  config.rs  handle.rs  licenses.rs  mod.rs  play_array.rs  player.rs  results.rs  strings.rs  tile_array.rs  winner.rs
src/uffi/: config.rs  mod.rs
ui/: .gitignore  build.gradle.kts  settings.gradle.kts
ui/.run/: desktop.run.xml
ui/bindings/: build.gradle.kts
ui/composeApp/: build.gradle.kts
ui/composeApp/src/androidMain/: AndroidManifest.xml
ui/composeApp/src/androidMain/kotlin/io/github/skeletonxf/: AppGlobalState.kt  MainActivity.kt  Platform.android.kt
ui/composeApp/src/androidMain/res/drawable/: icon.xml
ui/composeApp/src/commonJvm/composeResources/drawable/: king.xml  piece.xml
ui/composeApp/src/commonJvm/kotlin/io/github/skeletonxf/: Platform.kt
ui/composeApp/src/commonTest/kotlin/io/github/skeletonxf/: ComposeAppCommonTest.kt
ui/composeApp/src/jvmMain/kotlin/io/github/skeletonxf/: Platform.jvm.kt  main.kt
ui/gradle/: libs.versions.toml
ui/src/main/kotlin/: Bridge.kt  Theme.kt  main.kt
ui/src/main/kotlin/io/github/skeletonxf/: Bridge.kt  FFIError.kt  FFIResult.kt  FFIThrowable.kt  GameState.kt  GameStateHandle.kt  Theme.kt
ui/src/main/kotlin/io/github/skeletonxf/bindings/: Constants$root.java  JavaTest.java  RuntimeHelper.java  bindings_h.java  constants$0.java
ui/src/main/kotlin/io/github/skeletonxf/board/: Board.kt  BoardData.kt  Position.kt
ui/src/main/kotlin/io/github/skeletonxf/data/: BoardData.kt  GameStateUpdate.kt  KResult.kt  Player.kt  Tile.kt  (+3 more)
ui/src/main/kotlin/uniffi/hnefatafl/: hnefatafl.kt
www/: index.html  main.js
(+80 files in other folders)
