[package]
name = "hnefatafl"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
easy-ml = "1.9"
clap = { version = "4", features = [ "derive" ] }
rustyline = "9.0"
serde = { version = "1.0", features = ["derive"] }
# This is way out of date, should migrate to latest
toml = "0.7.3"
widestring = "1.0.2"
backtrace = "0.3"

[build-dependencies]
cbindgen = "0.24"
