[package]
name = "hnefatafl"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ML
easy-ml = "2.0"
# argument parsing
clap = { version = "4", features = [ "derive" ] }
rustyline = "9.0"

# serialisation
serde = { version = "1.0", features = ["derive"] }

# This is way out of date, should migrate to latest
toml = "0.7.3"

widestring = "1.0.2"
backtrace = "0.3"
rand = "0.8.5"

# parallelism
rayon = "1.10"

# UniFFI version needs to match Gobley version used in gradle
# https://gobley.dev/docs/bindgen
uniffi = { version = "0.29.4", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
